--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -23,11 +23,18 @@
                                    th:href="${cars}"
                                    th:with="cars=${T(org.lukaszse.carRental.util.Mappings).CARS}">Cars</a>
                             </li>
-                            <li class="nav-item">
+                            <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                                 <a class="nav-link"
                                    th:href="${reservations}"
                                    th:with="reservations=${T(org.lukaszse.carRental.util.Mappings).RESERVATIONS}">Reservations</a>
                             </li>
+
+                            <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">
+                                <a class="nav-link"
+                                   th:href="${reservations}"
+                                   th:with="reservations=${T(org.lukaszse.carRental.util.Mappings).USER_RESERVATIONS}">Reservations</a>
+                            </li>
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
