--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head id="headId">
     <meta charset="UTF-8">
     <title>Contractor</title>
@@ -9,11 +10,14 @@
 <div th:replace="~{fragments/menu :: menuFragment}"/>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<H1 align="center">Car Rental Application</H1>
+<H2 class="text-center" th:utext="'Hello ' + ${user.userName} + '!'"></H2>
+<br>
+<H2 align="center">Welcome to Car Rental Application</H2>
 <p><br></p>
 <p align="center">This is demo version.</p>
 <div align="center">
 </div>
+
 <div align="center">
 <footer id="footerId">this is a footer</footer>
 </div>
